--- a/new.html
+++ b/new.html
@@ -462,8 +462,8 @@ section > .news {
         <img src="assets/img/boat-removebg-preview.png" alt="Boat" class="sticker">
     </div> -->
 
-    <p>Experience the culture, heritage, and joy of the Beary community</p>
-    <p class="small-text">By Mangalore.Story</p>
+    <!-- <p>Experience the culture, heritage, and joy of the Beary community</p> -->
+    <!-- <p class="small-text">By Mangalore.Story</p> -->
 </div>
  
 
