added new style

--- a/new.html
+++ b/new.html
@@ -498,7 +498,7 @@ section {
 
         </div>
 
-        <section class="contact-section">
+        <div class="contact-section">
             <h2 style="text-align: center;">Connect Us</h2>
             <form class="contact-form" onsubmit="sendWhatsAppMessage(event)">
                 <input type="text" id="name" placeholder="Your Name" required>
@@ -512,7 +512,7 @@ section {
                 <textarea id="message" placeholder="Enter your message..." required></textarea>
                 <button type="submit">Inquire</button>
             </form>
-        </section>
+        </div>
     <!-- JavaScript to Show Hero Section -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
