--- a/new.html
+++ b/new.html
@@ -17,14 +17,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Orbitron', sans-serif;
     background: url('assets/img/background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
     text-align: center;
+    position: relative; /* Needed for the overlay */
 }
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110%;
+    background: rgba(0, 0, 0, 0.4); /* Adjust opacity as needed */
+    z-index: -1; /* Keeps it behind the content */
+}
+
 /* Hero Section */
 .hero {
     width: 100%;
