removed clock tower

--- a/new.html
+++ b/new.html
@@ -214,14 +214,13 @@ body::before {
     font-size: 1.2em;
     font-weight: bold;
 }
-
 /* Stickers */
 .sticker {
     position: absolute;
     width: 250px;
     height: auto;
     z-index: 2;
-    bottom: 0.1%;
+    bottom: -35%; /* Move stickers further down */
 }
 
 .sticker img {
@@ -230,18 +229,37 @@ body::before {
     mix-blend-mode: multiply;
 }
 
+/* Left Sticker */
 .sticker-left {
     left: 5%;
-    width: 180px;
-    bottom: -25%; /* Move it down */
+    width: 200px; /* Adjusted size */
+    bottom: -100%; /* Move it further down for large screens */
 }
 
-
+/* Right Sticker */
 .sticker-right {
     right: 5%;
-    width: 400px;
-    bottom: 0%;
+    width: 450px; /* Adjusted size */
+    bottom: -60%; /* Move it further down */
 }
+
+/* Responsive Adjustments for Mobile Screens */
+@media (max-width: 600px) {
+    .sticker {
+        bottom: -10%; /* Adjust positioning for mobile */
+    }
+
+    .sticker-left {
+        width: 120px; /* Smaller size for mobile */
+        bottom: -25%;
+    }
+
+    .sticker-right {
+        width: 200px; /* Smaller size for mobile */
+        bottom: -25%;
+    }
+}
+
 
 /* Responsive Adjustments */
 @media (max-width: 768px) {
@@ -254,14 +272,6 @@ body::before {
     .hero .small-text {
         font-size: 3vw;
     }
-
-    .sticker-left {
-        width: 150px;
-    }
-    .sticker-right {
-        width: 320px;
-        bottom: -10%;
-    }
 }
 
 @media (max-width: 480px) {
@@ -273,14 +283,6 @@ body::before {
     }
     .hero .small-text {
         font-size: 4vw;
-    }
-
-    .sticker-left {
-        width: 120px;
-    }
-    .sticker-right {
-        width: 200px;
-        bottom: -4%;
     }
 }
 
@@ -510,7 +512,7 @@ section {
 <!--     
     Stickers Below Date Image --> 
      <div class="stickers">
-        <img src="assets/img/clocktower-removebg-preview (1).png" alt="Clock Tower" class="sticker-left">
+        <!-- <img src="assets/img/clocktower-removebg-preview (1).png" alt="Clock Tower" class="sticker-left"> -->
         <img src="assets/img/boat-removebg-preview (3).png" alt="Boat" class="sticker-right">
     </div>
 
