--- a/new.html
+++ b/new.html
@@ -513,11 +513,11 @@ section {
     Stickers Below Date Image --> 
      <div class="stickers">
         <!-- <img src="assets/img/clocktower-removebg-preview (1).png" alt="Clock Tower" class="sticker-left"> -->
-        <img src="assets/img/boat-removebg-preview (3).png" alt="Boat" class="sticker-right">
+        <!-- <img src="assets/img/boat-removebg-preview (3).png" alt="Boat" class="sticker-right"> -->
     </div>
 
-     <p>Experience the culture, heritage, and joy of the Beary community</p> 
-    <p class="small-text">By Mangalore.Story</p>
+     <!-- <p>Experience the culture, heritage, and joy of the Beary community</p>  -->
+    <!-- <p class="small-text">By Mangalore.Story</p> -->
 </div>
  
 <div class="news">
