--- a/new.html
+++ b/new.html
@@ -67,7 +67,7 @@ body::before {
 .hero-logo {
     width: 18%;
     max-width: 130px;
-    margin-top: 190px;
+    margin-top: 150px;
     margin-bottom: 5px; /* Moved closer to title */
     z-index: 2;
 }
@@ -76,7 +76,7 @@ body::before {
 .hero-title-image {
     width: 45%;
     max-width: 400px;
-    margin-top: -30px;
+    margin-top: -50px;
     /* margin-bottom: 10px; Reduced gap */
     z-index: 2;
 }
@@ -524,9 +524,9 @@ section {
     <section class="scroll-section news-message">
       <p>Cultural Activities | Achievers Recognition | Food Festival | Talent Show | Job Mela | Kids Old Fun Games | Startup Platform | Cricket Match | Family Gathering | Food Competition | Mehandi Competition | Pravasigalige 1 Day Gowji Gammath | Pravasi Award | Social Award | Cultural Award | Madyama Award | Sports Award | Marhoom Award | Youth Motivation Award</p>
     </section>
-    <section class="news-message">
+    <!-- <section class="news-message">
       <p>Cultural Activities | Achievers Recognition | Food Festival | Talent Show | Job Mela | Kids Old Fun Games | Startup Platform | Cricket Match | Family Gathering | Food Competition | Mehandi Competition | Pravasigalige 1 Day Gowji Gammath | Pravasi Award | Social Award | Cultural Award | Madyama Award | Sports Award | Marhoom Award | Youth Motivation Award</p>
-    </section>
+    </section> -->
   </div>
   
    
