--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
 </head>
 <style>
     /* Reset & Global Styles */
@@ -121,7 +120,7 @@
 
             // Redirect to homepage after animation
             setTimeout(function() {
-                window.location.href = "new.html"; // Change to your actual homepage file
+                window.location.href = "main.html"; // Change to your actual homepage file
             }, 2500);
         }
 
