--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
             transition: opacity 1s ease-in-out;
         }
 
+        @media (max-width: 768px) {
+    #starter {
+        font-size: 1rem; /* Reduce font size for smaller screens */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%; /* Ensure proper spacing */
+        white-space: normal; /* Allow text wrapping if needed */
+        padding: 10px; /* Add padding for better touch accessibility */
+    }
+}
+
+
         /* Curtain */
         #curtain {
             position: absolute;
